# AccountBooks

./: .dockerignore  .editorconfig  .gitignore  MANIFEST.in  README.md  build.sh  init_project.sh  manage.py  pyproject.toml  requirements.txt  start_prod.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cleanup-untagged.yml  docker-publish.yml
AccountBooks/: settings.py  urls.py  wsgi.py
accounts/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
docker/: Dockerfile  Dockerfile.distroless  Dockerfile.old  docker-entrypoint.sh  launcher_distroless.py
scripts/: format_code.sh  populate_data.py  take_screenshots copy.py  take_screenshots.py
templates/: base.html  customers.html  goods.html  index.html  login-meihua.html  login.html  orders.html  register.html
templates/login/: index.html  login.html  register.html
templates/partials/: customer_form.html  goods_form.html  order_form.html
