[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "accountbooks"
version = "0.1.0"
description = "一个高颜值、易操作的债务与账务管理系统。"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["django", "accounting", "management", "books"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=3.2.13",
    "django-simpleui>=4.0.2",
    "django-summernote>=0.8.20.0",
    "django-crispy-forms>=2.0",
    "django-elasticsearch-dsl>=7.3",
    "django-elasticsearch-dsl-drf>=0.22.5",
    "django-haystack>=3.2.1",
    "djangorestframework>=3.14.0",
    "Pillow>=9.2.0",
    "sqlparse>=0.4.2",
    "pytz>=2021.3",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TID"]
ignore = []

[tool.django]
settings_module = "AccountBooks.settings"
