[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["AccountBooks", "accounts"]
namespaces = false

[project]
name = "accountbooks"
version = "0.1.0"
description = "一个高颜值、易操作的债务与账务管理系统。"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["django", "accounting", "management", "books"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Django>=3.2.13",
    "django-jazzmin>=2.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TID"]
ignore = []

[tool.django]
settings_module = "AccountBooks.settings"
